Updating Planting Process
Udah bisa attach data plants ke deck dan udah attach data tipe tiles ke grid pane. Udah kasih constraints juga tentang tipe tanaman dengan tipe tiles dan constraint overlapping